Fix overlapping menu item contents

--- a/project/project/static/css/menu.css
+++ b/project/project/static/css/menu.css
@@ -5,14 +5,15 @@
   text-align: left;
   background-color: rgba(15, 167, 227, 0.1);
   border-bottom: solid;
-  width: 30%;
-  height: 20%;
+  width: 190px;
+  height: 120px;
   color: white;
   font-size: 75%;
   font-family: Montserrat;
   border-color: white;
   margin-bottom: 1%;
   margin-top: 1%;
+  
 }
 
 .titles {
@@ -71,6 +72,21 @@ body {
   align-items: center;
   background-color: rgb(30, 40, 44);
   height: 93.2vh;
+}
+
+.course {
+  float: left;
+  overflow: auto;
+  position: relative;
+}
+
+.details {
+  width: 100%;
+  float: left;
+  height: 20%;
+  margin: 0;
+  padding-top: 30%;
+  padding-left: 1px;
 }
 
 .dishbox2::-webkit-scrollbar {
